modules/gdscript/tests/scripts/parser/errors/if_features_function_clashes_with_other_type.gd
func _test():
	pass

var _other

@if_features()
func _other():
	pass
